fixed days ago issue and removed days on mobile from chart

--- a/src/components/hormone.css
+++ b/src/components/hormone.css
@@ -42,9 +42,9 @@
   display: none;
 }
 
-/*#day-tag {
+#day-tag {
   fill: #484043;
-}*/
+}
 
 .tooltip {
   position: absolute;
